:heavy_plus_sign: Added AOS

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,8 @@
 						<div class="nav-center mx-auto w-50 position-absolute text-center d-none d-lg-block">
 							<img src="img/arrow.png" alt="arrow" aria-hidden="true"
 								class="nav-center-img position-absolute d-none d-lg-block">
-							<h1 class="text-oswald position-relative navBrand">digital&nbsp;<b class="text-primary">.</b></h1>
+							<h1 data-aos="fade-down" data-aos-offset="10" class="text-oswald position-relative navBrand">
+								digital&nbsp;<b class="text-primary">.</b></h1>
 							<div class="nav-social position-relative text-center">
 								<a href="https://facebook.com" class="text-light" target="_blank">
 									<i class="fa fa-facebook facebook"></i>
@@ -69,7 +70,7 @@
 					</div>
 				</nav>
 				<header class="container header">
-					<div class="hero-text text-center">
+					<div data-aos="fade-down" data-aos-offset="10" class="hero-text text-center">
 						<h1 class="display-2 text-uppercase text-oswald font-weight-bold">This is the Future of Web Design.</h1>
 						<p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, provident accusamus,
 							<br> velit repudiandae velit repudiandae quos perferendis molestias ipsam.</p>
@@ -83,7 +84,7 @@
 			<div class="row">
 				<div class="col-lg-1"></div>
 				<div class="col-lg-3 my-4 text-center text-lg-left p-5">
-					<h3 class="text-uppercase display-4 font-weight-bold">
+					<h3 data-aos="fade-right" data-aos-offset="10" class="text-uppercase display-4 font-weight-bold">
 						<span class="text-primary">We are</span> creative team.</h3>
 					<strong>Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet,Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Nulla
@@ -94,7 +95,7 @@
 						nam consectetur.</p>
 					<button class="mt-4 btn btn-default btn-rounded bg-primary text-light font-weight-bold">Read More</button>
 				</div>
-				<div class="col-lg-8 d-none d-lg-block">
+				<div data-aos="zoom-out-left" class="col-lg-8 d-none d-lg-block">
 					<div class="section-1-img-container position-absolute">
 						<div class="d-lg-flex">
 							<div class="section-1-img-border m-3">
@@ -121,7 +122,7 @@
 		<section class="section-2 bg-dark">
 			<div class="row">
 				<div class="col-lg-1"></div>
-				<div class="col-lg-3 my-4 text-center text-lg-left text-light p-5">
+				<div data-aos="fade-right" data-aos-offset="10" class="col-lg-3 my-4 text-center text-lg-left text-light p-5">
 					<h3 class="text-uppercase display-4 font-weight-bold">
 						<span class="text-primary">Our best</span> team.</h3>
 					<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, magni?.Lorem ipsum dolor sit
@@ -169,7 +170,7 @@
 									<h4 class="mt-1">
 										<b>Jhon Doe</b>
 									</h4>
-									<p>Back-end Developer</p>
+									<p>Back-End Developer</p>
 								</div>
 							</div>
 						</div>
@@ -193,7 +194,7 @@
 									<h4 class="mt-1">
 										<b>John Doe</b>
 									</h4>
-									<p>Front-end Developer</p>
+									<p>Front-End Developer</p>
 								</div>
 							</div>
 						</div>
@@ -209,14 +210,13 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</section>
 		<section class="section-3">
 			<div class="row">
 				<div class="col-lg-1"></div>
-				<div class="col-lg-3 my-4 text-center text-lg-left p-4">
+				<div data-aos="fade-right" data-aos-offset="10" class="col-lg-3 my-4 text-center text-lg-left p-4">
 					<h3 class="text-uppercase display-4 font-weight-bold">
 						<span class="text-primary">Our</span> creative work.</h3>
 					<p class="text-dark"> Culpa, expedita itaque maxime omnis eos ab autem ratione totam nam consectetur. Lorem
@@ -247,7 +247,7 @@
 				<div class="col-lg-6 text-center ">
 					<img src="img/section-4-1.jpg" alt="" class="img-fluid section-4-1 my-4 ">
 				</div>
-				<div class="col-lg-5 text-light p-4 text-lg-left text-center">
+				<div data-aos="fade-left" data-aos-offset="10" class="col-lg-5 text-light p-4 text-lg-left text-center">
 					<h3 class="text-uppercase display-4 font-weight-bold">
 						<span class="text-primary">Why</span>
 						<br>choose us.</h3>
@@ -293,7 +293,7 @@
 		<section class="section-5 position-relative">
 			<div class="row">
 				<div class="col-lg-1"></div>
-				<div class="col-lg-3 my-4 text-lg-right p-4 text-center">
+				<div data-aos="fade-right" data-aos-offset="15" class="col-lg-3 my-4 text-lg-right p-4 text-center">
 					<h3 class="text-uppercase display-4 font-weight-bold">
 						<span class="text-primary">Our</span> best services.</h3>
 					<div class="float-md-right">
@@ -310,7 +310,7 @@
 					<button class="mt-4 btn btn-default btn-rounded bg-primary text-light font-weight-bold">Read More</button>
 				</div>
 				<div class="col-lg-1">
-					<div class="section-5-over-container bg-dark position-relative d-none d-lg-block">
+					<div data-aos="zoom-out" class="section-5-over-container bg-dark position-relative d-none d-lg-block">
 						<div class="row">
 							<div
 								class="col-md-6 section-5-col text-light d-flex flex-column align-items-center justify-content-center text-center">
@@ -353,9 +353,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-lg-7 section-5-background">
-
-				</div>
+				<div class="col-lg-7 section-5-background"></div>
 			</div>
 		</section>
 		<section class="section-6">
@@ -363,18 +361,18 @@
 				<div class="col-lg-1 bg-dark"></div>
 				<div class="col-lg-3 bg-dark pt-5 text-center">
 					<h2 class="display-4 text-uppercase text-light font-weight-bold">
-						<span class="text-primary">Our</span> Client Say</h2>
+						<span class="text-primary" data-aos="fade">Our</span> Client Say</h2>
 					<div class="review-container">
 						<div class="my-3 review">
 							<p class="fa fa-quote-left review-quote text-light"></p>
-							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem maiores
+							<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem maiores
 								voluptatibus, incidunt nemo porro nulla quas,
 								ea, tempore debitis eius tenetur veniam, eos iure a!</p>
 							<strong class="text-uppercase text-light">John Doe,CEO</strong>
 						</div>
 						<div class="my-3 review">
 							<p class="fa fa-quote-left review-quote text-light"></p>
-							<p class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem maiores
+							<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem maiores
 								voluptatibus, incidunt nemo porro nulla quas,
 								ea, tempore debitis eius tenetur veniam, eos iure a!</p>
 							<strong class="text-uppercase text-light">John Doe,CEO</strong>
