:lock: Improved security

--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,13 @@
 						<div class="navLeft float-lg-left text-lg-left mr-auto">
 							<ul class="navbar-nav float-lg-left text-nowrap">
 								<li class="nav-item">
-									<a class="nav-link text-light text-uppercase" href="# ">Home</a>
+									<a rel="noopener noreferrer" class="nav-link text-light text-uppercase" href="# ">Home</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link text-light text-uppercase" href="# ">About Us</a>
+									<a rel="noopener noreferrer" class="nav-link text-light text-uppercase" href="# ">About Us</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link text-light text-uppercase" href="# ">Blog</a>
+									<a rel="noopener noreferrer" class="nav-link text-light text-uppercase" href="# ">Blog</a>
 								</li>
 							</ul>
 						</div>
@@ -43,13 +43,13 @@
 							<h1 data-aos="fade-down" data-aos-offset="10" class="text-oswald position-relative navBrand">
 								digital&nbsp;<b class="text-primary">.</b></h1>
 							<div class="nav-social position-relative text-center">
-								<a href="https://facebook.com" class="text-light" target="_blank">
+								<a rel="noopener noreferrer" href="https://facebook.com" class="text-light" target="_blank">
 									<i class="fa fa-facebook facebook"></i>
 								</a>
-								<a href="https://twitter.com" class="text-light" target="_blank">
+								<a rel="noopener noreferrer" href="https://twitter.com" class="text-light" target="_blank">
 									<i class="fa fa-twitter twitter"></i>
 								</a>
-								<a href="https://linkedin.com" class="text-light" target="_blank">
+								<a rel="noopener noreferrer" href="https://linkedin.com" class="text-light" target="_blank">
 									<i class="fa fa-linkedin linkedin"></i>
 								</a>
 							</div>
@@ -57,13 +57,13 @@
 						<div class="navRight text-lg-right ml-auto">
 							<ul class="navbar-nav float-lg-right text-nowrap">
 								<li class="nav-item">
-									<a class="nav-link text-light text-uppercase" href="#">Services</a>
+									<a rel="noopener noreferrer" class="nav-link text-light text-uppercase" href="#">Services</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link text-light text-uppercase" href="#">Pages</a>
+									<a rel="noopener noreferrer" class="nav-link text-light text-uppercase" href="#">Pages</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link text-light text-uppercase" href="#">Contact us</a>
+									<a rel="noopener noreferrer" class="nav-link text-light text-uppercase" href="#">Contact us</a>
 								</li>
 							</ul>
 						</div>
@@ -439,15 +439,15 @@
 							</div>
 						</div>
 						<!--
-                        <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                        </a>
-                        -->
+						<a rel="noopener noreferrer" class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a rel="noopener noreferrer" class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+						-->
 						<ol class="carousel-indicators p-3 my-2 bg-primary">
 							<li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
 							<li data-target="#carouselIndicators" data-slide-to="1"></li>
@@ -461,12 +461,18 @@
 			<h2 class="text-uppercase text-light font-weight-bold my-4">
 				<span class="text-primary">Get</span> in touch</h2>
 			<div>
-				<a href="https://facebook.com" target="_blank" class="fa fa-facebook fa-circle-down text-light mt-1"></a>
-				<a href="https://plus.google.com" target="_blank" class="fa fa-google-plus fa-circle-down text-light mt-1"></a>
-				<a href="https://vk.com" target="_blank" class="fa fa-vk fa-circle-down text-light mt-sm-1"></a>
-				<a href="https://youtube.com" target="_blank" class="fa fa-youtube fa-circle-down text-light mt-1"></a>
-				<a href="https://linkedin.com" target="_blank" class="fa fa-linkedin fa-circle-down text-light mt-1"></a>
-				<a href="https://digg.com" target="_blank" class="fa fa-digg fa-circle-down text-light mt-1"></a>
+				<a rel="noopener noreferrer" href="https://facebook.com" target="_blank"
+					class="fa fa-facebook fa-circle-down text-light mt-1"></a>
+				<a rel="noopener noreferrer" href="https://plus.google.com" target="_blank"
+					class="fa fa-google-plus fa-circle-down text-light mt-1"></a>
+				<a rel="noopener noreferrer" href="https://vk.com" target="_blank"
+					class="fa fa-vk fa-circle-down text-light mt-sm-1"></a>
+				<a rel="noopener noreferrer" href="https://youtube.com" target="_blank"
+					class="fa fa-youtube fa-circle-down text-light mt-1"></a>
+				<a rel="noopener noreferrer" href="https://linkedin.com" target="_blank"
+					class="fa fa-linkedin fa-circle-down text-light mt-1"></a>
+				<a rel="noopener noreferrer" href="https://digg.com" target="_blank"
+					class="fa fa-digg fa-circle-down text-light mt-1"></a>
 			</div>
 		</section>
 		<footer class="bg-dark text-light text-center position-relative">
@@ -499,14 +505,15 @@
 					</div>
 					<div>
 						<h5>Address</h5>
-						<address>123, Main Road, New York City,
+						<a rel="noopener noreferrer" ddress>123, Main Road, New York City,
 							<br>My Country 123 456</address>
 					</div>
 				</div>
 			</div>
 			<img src="img/arrow.png" alt="" class="design-img position-absolute d-none d-lg-inline-block">
 			<div class="footer-copyright position-absolute">
-				<strong>Designed By <a href="https://psdfreebies.com/" class="link text-white">PSDfreebies</a></strong>
+				<strong>Designed By <a rel="noopener noreferrer" href="https://psdfreebies.com/"
+						class="link text-white">PSDfreebies</a></strong>
 				<br>
 				<span class="text-uppercase my-1">Copyright &copy; 2017</span>
 			</div>
