:iphone: Improved responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -385,7 +385,7 @@
 				<div class="col-lg-4 bg-light pt-5 text-center">
 					<h2 class="text-uppercase text-primary fa fa-quote-left fa-big-quote"></h2>
 					<div id="carouselIndicators" class="carousel slide text-center" data-ride="carousel">
-						<div class="carousel-inner">
+						<div class="carousel-inner py-2 py-md-0">
 							<div class="carousel-item active">
 								<div class="jumbotron shadow px-5">
 									<strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum inventore ratione
@@ -505,8 +505,7 @@
 					</div>
 					<div>
 						<h5>Address</h5>
-						<a rel="noopener noreferrer" ddress>123, Main Road, New York City,
-							<br>My Country 123 456</address>
+						<address>123, Main Road, New York City, <br>My Country 123 456</address>
 					</div>
 				</div>
 			</div>
