--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 				</header>
 			</div>
 		</div>
-		<section class="section-1 position-relative">
+		<section class="section-1 position-relative overflow-hidden">
 			<img src="img/arrow.png" alt="" class="position-absolute section-1-img-background d-none d-lg-block">
 			<div class="row">
 				<div class="col-lg-1"></div>
@@ -96,22 +96,22 @@
 					<button class="mt-4 btn btn-default btn-rounded bg-primary text-light font-weight-bold">Read More</button>
 				</div>
 				<div data-aos="zoom-out-left" class="col-lg-8 d-none d-lg-block">
-					<div class="section-1-img-container position-absolute">
+					<div class="section-1-img-container position-absolute overflow-hidden">
 						<div class="d-lg-flex">
-							<div class="section-1-img-border m-3">
+							<div class="section-1-img-border overflow-hidden m-3">
 								<div class="section-1-img-fluid section-1-img-1"></div>
 							</div>
 						</div>
 						<div class="d-lg-flex">
-							<div class="section-1-img-border m-3">
+							<div class="section-1-img-border overflow-hidden m-3">
 								<div class="section-1-img-fluid section-1-img-2"></div>
 							</div>
-							<div class="section-1-img-border m-3">
+							<div class="section-1-img-border overflow-hidden m-3">
 								<div class="section-1-img-fluid section-1-img-3"></div>
 							</div>
 						</div>
 						<div class="d-lg-flex">
-							<div class="section-1-img-border m-3">
+							<div class="section-1-img-border overflow-hidden m-3">
 								<div class="section-1-img-fluid section-1-img-4"></div>
 							</div>
 						</div>
@@ -119,7 +119,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section-2 bg-dark">
+		<section class="section-2 bg-dark overflow-hidden">
 			<div class="row">
 				<div class="col-lg-1"></div>
 				<div data-aos="fade-right" data-aos-offset="10" class="col-lg-3 my-4 text-center text-lg-left text-light p-5">
@@ -142,8 +142,8 @@
 				<div class="col-lg-8 text-center px-5">
 					<div class="row my-4">
 						<div class="col-lg-4">
-							<div class="card mt-2">
-								<img src="img/section-2-1.png" alt="Avatar" class="img-fluid section-2-img">
+							<div class="card mt-2 overflow-hidden">
+								<img src="img/section-2-1.png" alt="Avatar" class="section-2-img">
 								<div class="container">
 									<h4 class="mt-1">
 										<b>John Doe</b>
@@ -153,8 +153,8 @@
 							</div>
 						</div>
 						<div class="col-lg-4">
-							<div class="card mt-2">
-								<img src="img/section-2-2.png" alt="Avatar" class="img-fluid section-2-img">
+							<div class="card mt-2 overflow-hidden">
+								<img src="img/section-2-2.png" alt="Avatar" class="section-2-img">
 								<div class="container">
 									<h4 class="mt-1">
 										<b>Jane Doe</b>
@@ -164,7 +164,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4">
-							<div class="card mt-2">
+							<div class="card mt-2 overflow-hidden">
 								<img src="img/section-2-3.png" alt="Avatar" class="img-fluid section-2-img">
 								<div class="container">
 									<h4 class="mt-1">
@@ -177,7 +177,7 @@
 					</div>
 					<div class="row my-4">
 						<div class="col-lg-4">
-							<div class="card mt-2">
+							<div class="card mt-2 overflow-hidden">
 								<img src="img/section-2-4.png" alt="Avatar" class="img-fluid section-2-img">
 								<div class="container">
 									<h4 class="mt-1">
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4">
-							<div class="card mt-2">
+							<div class="card mt-2 overflow-hidden">
 								<img src="img/section-2-5.png" alt="Avatar" class="img-fluid section-2-img">
 								<div class="container">
 									<h4 class="mt-1">
@@ -199,7 +199,7 @@
 							</div>
 						</div>
 						<div class="col-lg-4">
-							<div class="card mt-2">
+							<div class="card mt-2 overflow-hidden">
 								<img src="img/section-2-6.png" alt="Avatar" class="img-fluid section-2-img">
 								<div class="container">
 									<h4 class="mt-1">
@@ -213,7 +213,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section-3">
+		<section class="section-3 overflow-hidden">
 			<div class="row">
 				<div class="col-lg-1"></div>
 				<div data-aos="fade-right" data-aos-offset="10" class="col-lg-3 my-4 text-center text-lg-left p-4">
@@ -242,7 +242,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section-4 bg-dark">
+		<section class="section-4 bg-dark overflow-hidden">
 			<div class="row">
 				<div class="col-lg-6 text-center ">
 					<img src="img/section-4-1.jpg" alt="" class="img-fluid section-4-1 my-4 ">
@@ -290,7 +290,7 @@
 				<div class="col-lg-1"></div>
 			</div>
 		</section>
-		<section class="section-5 position-relative">
+		<section class="section-5 position-relative overflow-hidden">
 			<div class="row">
 				<div class="col-lg-1"></div>
 				<div data-aos="fade-right" data-aos-offset="15" class="col-lg-3 my-4 text-lg-right p-4 text-center">
@@ -356,7 +356,7 @@
 				<div class="col-lg-7 section-5-background"></div>
 			</div>
 		</section>
-		<section class="section-6">
+		<section class="section-6 overflow-hidden">
 			<div class="row">
 				<div class="col-lg-1 bg-dark"></div>
 				<div class="col-lg-3 bg-dark pt-5 text-center">
@@ -457,7 +457,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section-7 text-center">
+		<section class="section-7 text-center overflow-hidden">
 			<h2 class="text-uppercase text-light font-weight-bold my-4">
 				<span class="text-primary">Get</span> in touch</h2>
 			<div>
